load("//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")
load("//rust/private:transitions.bzl", "with_disabled_rename_first_party_crates_exec")

rust_library(
    name = "cargo_build_script_output_parser",
    srcs = ["lib.rs"],
)

rust_test(
    name = "test",
    crate = ":cargo_build_script_output_parser",
)

with_disabled_rename_first_party_crates_exec(
    name = "cargo_build_script_runner", 
    visibility = ["//visibility:public"],
    target = "cargo_build_script_runner_impl")

rust_binary(
    name = "cargo_build_script_runner_impl",
    crate_name = "cargo_build_script_runner",
    srcs = ["bin.rs"],
    deps = [":cargo_build_script_output_parser"],
)

rust_test(
    name = "bin_test",
    crate = ":cargo_build_script_runner",
    deps = [":cargo_build_script_runner"],
)
