load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//rust/private:rust.bzl", "transform_deps_fn")

bzl_library(
    name = "rules",
    srcs = glob(
        ["**/*.bzl"],
    ),
    visibility = ["//rust:__subpackages__"],
    deps = [
        "//rust/platform:rules",
    ],
)

transform_deps_fn(name = "transform_deps_fn", visibility = ["//visibility:public"])