load("//rust:defs.bzl", "rust_library", "rust_proc_macro", "rust_test")
load("//rust/private:transitions.bzl", "with_disabled_rename_first_party_crates")

with_disabled_rename_first_party_crates(
    name = "import",
    visibility = ["//visibility:public"],
    target = ":import_impl")
rust_proc_macro(
    name = "import_impl",
    crate_name = "import",
    srcs = [
        "import.rs",
    ],
    deps = [
        ":import_internal",
        "//util/import/raze:syn",
    ],
    visibility = ["//visibility:public"],
)

rust_library(
    name = "import_internal",
    srcs = [
        "import_internal.rs",
    ],
    deps = [
        "//util/import/raze:aho_corasick",
        "//util/import/raze:lazy_static",
        "//util/import/raze:proc_macro2",
        "//util/import/raze:quote",
        "//util/import/raze:syn",
        "//util/label",
    ],
)

rust_test(
    name = "import_internal_test",
    crate = ":import_internal",
    deps = [
        "//util/import/raze:quickcheck",
    ],
)
